fixed alignment of header text

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -61,7 +61,6 @@ body {
   color: $color-white;
   text-transform: uppercase;
   margin-bottom: 6rem;
-  backface-visibility: hidden;
 }
 
 .heading-primary--main {
@@ -77,8 +76,9 @@ body {
   display: block;
   font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 1.75rem;
+  letter-spacing: 1.7rem;
   animation: moveInRight 3s;
+  transform: translateX(-1rem);
 }
 
 .header__text-box {
@@ -87,6 +87,9 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  backface-visibility: hidden;
+  filter: blur(1px);
+  -webkit-filter: blur(0);
 }
 
 @keyframes moveInLeft {
@@ -106,14 +109,14 @@ body {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(10px);
+    transform: translateX(1rem);
   }
   80% {
     transform: translateX(-2.5rem);
   }
   100% {
     opacity: 1;
-    transform: translate(0);
+    transform: translate(-1rem);
   }
 }
 
