--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -43,8 +43,7 @@ body {
 .heading-primary {
   color: white;
   text-transform: uppercase;
-  margin-bottom: 6rem;
-  backface-visibility: hidden; }
+  margin-bottom: 6rem; }
 
 .heading-primary--main {
   display: block;
@@ -58,15 +57,19 @@ body {
   display: block;
   font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 1.75rem;
-  animation: moveInRight 3s; }
+  letter-spacing: 1.7rem;
+  animation: moveInRight 3s;
+  transform: translateX(-1rem); }
 
 .header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center; }
+  text-align: center;
+  backface-visibility: hidden;
+  filter: blur(1px);
+  -webkit-filter: blur(0); }
 
 @keyframes moveInLeft {
   0% {
@@ -81,12 +84,12 @@ body {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(10px); }
+    transform: translateX(1rem); }
   80% {
     transform: translateX(-2.5rem); }
   100% {
     opacity: 1;
-    transform: translate(0); } }
+    transform: translate(-1rem); } }
 
 @keyframes moveToBottom {
   0% {
